Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,7 @@ variables:
   IMAGE_NAME: azure-devops-agent
   IMAGE_TAG: $(Build.BuildId)
 
-pool:
-  vmImage: 'ubuntu-latest'
+pool: 'Default'
 
 steps:
   - checkout: self
