--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,10 +42,16 @@ steps:
       helm package ./chart
     displayName: 'Package Helm chart'
 
-  # Push Helm chart to ACR as OCI artifact
-  - script: |
-      export HELM_EXPERIMENTAL_OCI=1
-      CHART_PACKAGE=$(ls chart/*.tgz | head -n1)
-      helm registry login $(ACR_NAME).azurecr.io --username ${{ secrets.AZURE_CLIENT_ID }} --password ${{ secrets.AZURE_CLIENT_SECRET }}
-      helm push $CHART_PACKAGE oci://$(ACR_NAME).azurecr.io/helm
+  # Push Helm chart to ACR as OCI artifact using service connection
+  - task: AzureCLI@2
     displayName: 'Push Helm chart to ACR'
+    inputs:
+      azureSubscription: 'Azure'
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        export HELM_EXPERIMENTAL_OCI=1
+        TOKEN=$(az acr login --name $(ACR_NAME) --expose-token --output tsv --query accessToken)
+        echo $TOKEN | helm registry login $(ACR_NAME).azurecr.io --username 00000000-0000-0000-0000-000000000000 --password-stdin
+        CHART_PACKAGE=$(ls chart/*.tgz | head -n1)
+        helm push $CHART_PACKAGE oci://$(ACR_NAME).azurecr.io/helm
