Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,8 @@ variables:
   IMAGE_NAME: azure-devops-agent
   IMAGE_TAG: $(Build.BuildId)
 
-pool: 'Default'
+pool: 
+  vmImage: 'ubuntu-latest'
 
 steps:
   - checkout: self
