--- a/.azuredevops/templates/build-and-push.yml
+++ b/.azuredevops/templates/build-and-push.yml
@@ -78,26 +78,42 @@ steps:
       inlineScript: 'az acr login --name ${{ parameters.acrName }}'
 
   # Build and push Docker image with ACR registry caching
-  - task: Docker@2
-    displayName: 'Build and push Docker image'
-    inputs:
-      containerRegistry: ${{ parameters.acrName }}
-      repository: '${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}'
-      command: 'buildAndPush'
-      Dockerfile: 'Dockerfile'
-      buildContext: '$(Build.SourcesDirectory)/src'
-      arguments: |
-        --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-        --build-arg VCS_REF=$(Build.SourceVersion)
-        --build-arg VERSION=$(Build.BuildNumber)
-        ${{ if parameters.enableCaching }}
-        --cache-from type=registry,ref=${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}:cache
-        --cache-to type=registry,ref=${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}:cache,mode=max
-        ${{ endif }}
-      tags: |
-        ${{ parameters.imageTag }}
-        latest
-        $(Build.SourceBranchName)
+  - ${{ if parameters.enableCaching }}:
+    - task: Docker@2
+      displayName: 'Build and push Docker image (with caching)'
+      inputs:
+        containerRegistry: ${{ parameters.acrName }}
+        repository: '${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}'
+        command: 'buildAndPush'
+        Dockerfile: 'Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)/src'
+        arguments: |
+          --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          --build-arg VCS_REF=$(Build.SourceVersion)
+          --build-arg VERSION=$(Build.BuildNumber)
+          --cache-from type=registry,ref=${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}:cache
+          --cache-to type=registry,ref=${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}:cache,mode=max
+        tags: |
+          ${{ parameters.imageTag }}
+          latest
+          $(Build.SourceBranchName)
+  - ${{ if not(parameters.enableCaching) }}:
+    - task: Docker@2
+      displayName: 'Build and push Docker image (no caching)'
+      inputs:
+        containerRegistry: ${{ parameters.acrName }}
+        repository: '${{ parameters.acrName }}.azurecr.io/${{ parameters.imageName }}'
+        command: 'buildAndPush'
+        Dockerfile: 'Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)/src'
+        arguments: |
+          --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          --build-arg VCS_REF=$(Build.SourceVersion)
+          --build-arg VERSION=$(Build.BuildNumber)
+        tags: |
+          ${{ parameters.imageTag }}
+          latest
+          $(Build.SourceBranchName)
 
   # Vulnerability scan
   - ${{ if parameters.runVulnerabilityScan }}:
